[gd_scene load_steps=11 format=2]

[ext_resource path="res://Objects/Catapult.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/GUI_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/background.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Root.gd" type="Script" id=4]
[ext_resource path="res://Assets/ui_background.png" type="Texture" id=5]
[ext_resource path="res://Objects/CatapultPlatform.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "EndGame"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EndGameLabel:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.980392, 0.00784314, 0.00784314, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ScoreLabel:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0.988235, 0.0588235, 0.0352941, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ScoreLabel:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0.0745098, 0.94902, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("ScoreLabel:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Root" type="Node" groups=[
"actors",
]]
script = ExtResource( 4 )
target_limit = 9
obstacle_limit = 3

[node name="Catapult" parent="." instance=ExtResource( 1 )]
position = Vector2( 200, 500 )
z_index = 4

[node name="EndGameLabel" type="Label" parent="."]
visible = false
margin_left = 116.0
margin_top = 268.0
margin_right = 300.0
margin_bottom = 316.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "END GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Targets" type="Node" parent="."]

[node name="NewTargetTimer" type="Timer" parent="."]
autostart = true

[node name="EndGameTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite2" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 197.5, 342 )
scale = Vector2( 0.787109, 1 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 198.5, 259 )
scale = Vector2( 0.787109, 1 )
texture = ExtResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 246.0
margin_top = 8.0
margin_right = 381.0
margin_bottom = 53.0
texture = ExtResource( 5 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
margin_left = 30.0
margin_top = 6.0
margin_right = 148.0
margin_bottom = 51.0
texture = ExtResource( 5 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 47.0
margin_top = 1.0
margin_right = 149.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="."]
margin_left = 278.0
margin_top = 3.0
margin_right = 378.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CatapultPlatform" parent="." instance=ExtResource( 6 )]
position = Vector2( -29, 463 )
scale = Vector2( 0.87826, 0.832214 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EndGame = SubResource( 1 )
anims/ScoreDown = SubResource( 2 )
anims/ScoreUp = SubResource( 3 )
anims/Start = SubResource( 4 )

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
margin_left = 111.0
margin_top = 322.0
margin_right = 301.0
margin_bottom = 371.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureButton"]
margin_left = 1.0
margin_top = -3.0
margin_right = 189.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "RESTART"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="NewTargetTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="EndGameTimer" to="." method="_on_EndGameTimer_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
